docs/envoy/v1.15.0/_sources/api-v3/extensions/filters/network/postgres_proxy/v3alpha/postgres_proxy.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/network/postgres_proxy/v3alpha/postgres_proxy.proto:

Postgres proxy
==============

.. _extension_envoy.filters.network.postgres_proxy:


This extension may be referenced by the qualified name *envoy.filters.network.postgres_proxy*

.. note::
  

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.

.. warning::
   This API is work-in-progress and is subject to breaking changes.

Postgres Proxy :ref:`configuration overview
<config_network_filters_postgres_proxy>`.

.. _envoy_v3_api_msg_extensions.filters.network.postgres_proxy.v3alpha.PostgresProxy:

extensions.filters.network.postgres_proxy.v3alpha.PostgresProxy
---------------------------------------------------------------

`[extensions.filters.network.postgres_proxy.v3alpha.PostgresProxy proto] <https://github.com/envoyproxy/envoy/blob/v1.15.0/api/envoy/extensions/filters/network/postgres_proxy/v3alpha/postgres_proxy.proto#L20>`_


.. code-block:: json

  {
    "stat_prefix": "..."
  }

.. _envoy_v3_api_field_extensions.filters.network.postgres_proxy.v3alpha.PostgresProxy.stat_prefix:

stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The human readable prefix to use when emitting :ref:`statistics
  <config_network_filters_postgres_proxy_stats>`.
  
  

